--- a/assiets/css/style.css
+++ b/assiets/css/style.css
@@ -19,19 +19,19 @@
 
 }
 
-.new_hotel {
+.nouveau_hotel {
     transition: 0.5s ease-in-out;
 }
-.new_hotel:hover {
+.nouveau_hotel:hover {
    background-color: rgb(17, 116, 25);
    border: none;
   
 }
-.new_hotel:hover p {
+.nouveau_hotel:hover p {
     color: white;
     transition: 0.5s ease-in-out;
 }
-.new_hotel:hover img {
+.nouveau_hotel:hover img {
     filter: invert(1);
     transition: 0.5s ease-in-out;
 
@@ -39,8 +39,8 @@
 
 }
 
-.new_hotel:active {
-    animation: rebon 0.3s; /* Appliquer l'animation lors du clic */
+.nouveau_hotel:active {
+    animation: rebon 0.3s; 
 }
 
 @keyframes rebon {
@@ -48,12 +48,56 @@
         transform: scale(1);
     }
     50% {
-        transform: scale(0.9); /* Agrandir le bouton */
+        transform: scale(0.9); 
     }
     100% {
-        transform: scale(1); /* Revenir à la taille d'origine */
+        transform: scale(1); 
     }
 }
+
+
+main {
+    position: relative;
+}
+
+
+.pop_up {
+    display: none;
+    transition: 0.5s ease;
+
+}
+
+.pop_up.active {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    /* background : rgba(0, 0, 0, 0.418) ; */
+ 
+
+
+} 
+
+.modal {
+    visibility: hidden;
+
+ 
+
+}
+
+.pop_up.active .modal {
+    visibility: visible;
+    transition: 1s ease;
+}
+
+
+
+
 
 
 
