--- a/assiets/css/style.css
+++ b/assiets/css/style.css
@@ -15,6 +15,8 @@
     --primaire: #45484B ;
 
     --bg : #F9FCFF;
+
+    --orange : #de8912 ;
    
 
 }
@@ -92,11 +94,61 @@ main {
 
 .pop_up.active .modal {
     visibility: visible;
-    transition: 1s ease;
+    animation:width 1s ease;
+}
+
+.volet {
+    visibility: hidden;
+    position: fixed;
 }
 
 
 
+
+
+@media (max-width:768px) {
+
+    .slide_barre {
+        position: fixed;
+        left: -40%;
+        width: 45%;
+        height: 100lvh;
+        overflow: hidden;
+        top: 0%;
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        justify-content: space-between;
+        transition: left 0.5s  ease, opacity 0.5s ease;
+    }
+
+
+    
+    
+
+
+    .volet {
+        position: fixed;
+        left: 0%;
+        top: 9.5%;
+        visibility: visible;
+        z-index: 100;
+        transition: left 0.5s  ease ;
+
+     
+    }
+    
+
+.volet.active {
+    
+    left: 42%;
+   
+}
+
+
+
+
+}
 
 
 
