--- a/assiets/css/style.css
+++ b/assiets/css/style.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lobster&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 
@@ -26,9 +26,18 @@
     --bg : #F9FCFF;
 
     --orange : #de8912 ;
+    --orange1 : rgba(255, 255, 255, 0.664);
+
+
    
 
 }
+
+
+
+
+ 
+
 
 .nouveau_hotel {
     transition: 0.5s ease-in-out;
@@ -36,6 +45,7 @@
 .nouveau_hotel:hover {
    background-color: rgb(17, 116, 25);
    border: none;
+   
   
 }
 .nouveau_hotel:hover p {
@@ -111,6 +121,8 @@ main {
     visibility: hidden;
     position: fixed;
 }
+
+
 
 
 
